packages/glasskube-ui/v0.16.0+1/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glasskube-ui
  namespace: glasskube-system
spec:
  selector:
    matchLabels:
      app: glasskube-ui
  template:
    metadata:
      labels:
        app: glasskube-ui
    spec:
      containers:
      - image: ghcr.io/glasskube/glasskube:v0.16.0
        imagePullPolicy: IfNotPresent
        name: glasskube
        ports:
          - name: http
            containerPort: 8580
        args:
          - serve
          - --host=
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
      serviceAccountName: glasskube-ui-sa
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: glasskube-ui
  name: glasskube-ui
  namespace: glasskube-system
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8580
      targetPort: http
  selector:
    app: glasskube-ui
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glasskube-ui
  namespace: glasskube-system
spec:
  rules:
    - host: glasskube-ui
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glasskube-ui
                port:
                  name: http
